samples/_failures_safe/1761374570_6e3a7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c179061.c: In function ‘main’:
./samples/SAFE/__tmp_5c179061.c:153:5: error: ‘initialize’ undeclared (first use in this function)
  153 |     initialize
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_5c179061.c:153:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5c179061.c:153:15: error: expected ‘;’ at end of input
  153 |     initialize
      |               ^
      |               ;
./samples/SAFE/__tmp_5c179061.c:153:5: error: expected declaration or statement at end of input
  153 |     initialize
      |     ^~~~~~~~~~
